Make a separated header file for blink::CreateElementFlags

We're going to use blink::CreateElementFlags in more header files, and
would like to avoid to include huge Document.h.

This CL has no behavior changes.

Bug: 805280
Change-Id: I64c89995cda3f76f1e75b6cf20af05f0e8eb2e24
Reviewed-on: https://chromium-review.googlesource.com/888191
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Commit-Queue: Kent Tamura <tkent@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532134}